# aegis-sky

./: BUSINESS_PALN.md  BUSINESS_PLAN.tex  README.md  structure.md  vcpkg.json
brain/src/export/: Compiler.cpp
brain/src/train/: Trainer.cpp
cloud/: docker-compose.yml
cloud/api/: go.mod
cloud/proto/: telemetry.proto
core/: CMakeLists.txt
core/include/aegis/hal/: ICamera.h  IRadar.h
core/include/aegis/platform/: CudaAllocator.h  Scheduler.h
core/include/aegis/services/fusion/: FusionEngine.cpp
core/include/aegis/services/perception/: Detection.h  InferenceManager.cpp  InferenceManager.h  Preprocess.cu
core/src/drivers/bridge_client/: ShmReader.cpp
core/src/drivers/real_sensors/: GStreamerCamera.cpp
core/src/main/: Main.cpp
core/src/services/comms/: CloudLink.cpp  CloudLink.h  StationLink.h
core/src/services/tracking/: KalmanFilter.cpp  TrackManager.h
core/tests/unit/: tst_kalman.cpp
docs/: xtorch_xinfer.md
shared/include/aegis_ipc/: shm_layout.h
sim/: CMakeLists.txt
sim/assets/scenarios/: bio_confusion.json  clutter_stealth.json  fov_breach.json  gimbal_stress.json  hypersonic_blur.json  kamikaze_dive.json  nap_of_earth.json  night_stalker.json  sea_skimmer.json  solar_blind.json
sim/include/sim/bridge_server/: ShmWriter.h
sim/include/sim/engine/: Projectile.h  SimEntity.h  WeatherSystem.h
sim/include/sim/physics/: GimbalPhysics.h  RadarPhysics.h  SwarmPhysics.h
sim/src/engine/: ScenarioLoader.cpp  SimEngine.cpp  SimEntity.cpp
sim/src/math/: Random.cpp
sim/src/phenomenology/optics/: MockRenderer.cpp
sim/src/physics/: GimbalPhysics.cpp  LaserPhysics.cpp  RadarPhysics.cpp
station/: CMakeLists.txt
station/src/: main.cpp
station/src/backend/comms/: StationProtocol.h
station/src/backend/tactical/: MissionPlanner.cpp
station/src/backend/video/: VideoReceiver.cpp
station/src/frontend/views/: SettingsView.qml
